# simulador_jubilacion

./: .editorconfig  .gitignore  COHORT_GENERATOR_IMPLEMENTATION_SUMMARY.md  COHORT_GENERATOR_PUBLIC_API.md  COHORT_GENERATOR_SPECIFICATION.md  CONTRIBUTION.md  EXECUTION_ENGINE_COMPLETION.md  EXPERIMENT_DEFINITION_ARCHITECTURE_REVIEW.md  IMPLEMENTATION_PHASE_GUIDANCE.md  IMPLEMENTATION_PROMPT.md  MARKET_EVOLUTION_SPECIFICATION_FINAL_APPROVAL.md  MARKET_EVOLUTION_STEP_SPECIFICATION.md  MONTHLY_RESULT_BUILDER_STEP_SPECIFICATION.md  NEXT_SESSION.md  PARAMETER_SWEEP_ENGINE_ARCHITECTURE_REVIEW.md  PARAMETER_SWEEP_ENGINE_PUBLIC_API.md  PORTFOLIO_REBALANCE_STEP_SPECIFICATION.md  PROJECT_PLAN.md  README.md  RESEARCH_EXECUTOR_SPECIFICATION.md  RESEARCH_LAYER_FINAL_ROADMAP.md  RESEARCH_LAYER_ROADMAP.md  RESEARCH_SWROPTIMIZER_ARCHITECTURE_REVIEW.md  RESEARCH_SWROPTIMIZER_IMPLEMENTATION_DESIGN_REVIEW.md  RESEARCH_SWROPTIMIZER_PUBLIC_API_REVIEW.md  RESEARCH_SWROPTIMIZER_SPECIFICATION.md  SESSION_COMPLETION_REPORT.md  SIMULATION_EXECUTOR_ARCHITECTURAL_REVIEW.md  SIMULATION_EXECUTOR_PUBLIC_API.md  SIMULATION_EXECUTOR_PUBLIC_API_REVIEW.md  SIMULATION_EXECUTOR_REVIEW.md  SIMULATION_RUNNER_ARCHITECTURAL_REVIEW.md  SIMULATION_RUNNER_IMPLEMENTATION_REPORT.md  SIMULATION_RUNNER_SPECIFICATION.md  SIMULATION_STATISTICS_BUILDER_IMPLEMENTATION.md  STATISTICS_BUILDER_INPUT_ANALYSIS.md  pyproject.toml
docs/: DOCUMENTATION_TREE.md  README.md
docs/architecture/api/: EXPERIMENT_DEFINITION_PUBLIC_API.md  RESEARCH_EXECUTOR_PUBLIC_API.md
docs/architecture/reviews/: COHORT_GENERATOR_ARCHITECTURE_REVIEW.md  RESEARCH_EXECUTOR_ARCHITECTURE_REVIEW.md  SIMULATION_EXECUTOR_CODE_REVIEW.md  SIMULATION_RUNNER_REVIEW.md
docs/continuity/: AI_ARCHITECT_GUIDE.md  CURRENT_STATE.md  GOVERNANCE.md  HUMAN_CONTRIBUTOR_GUIDE.md  NEXT_SESSION.md  OPERATIONAL_DASHBOARD.md  PROJECT_CONTEXT.md  SOURCE_OF_TRUTH.md
docs/history/: CLEANUP_SUMMARY.md  MARKET_EVOLUTION_IMPLEMENTATION_GUIDANCE.md  PARAMETER_SWEEP_ENGINE_IMPLEMENTATION_SUMMARY.md
docs/roadmaps/milestones/: RESEARCH_LAYER_FINAL_ROADMAP.md
docs/specifications/engine/: SIMULATION_EXECUTOR_SPECIFICATION.md  SIMULATION_STATE_UPDATE_STEP_SPECIFICATION.md  SIMULATION_STATISTICS_BUILDER_SPECIFICATION.md
docs/specifications/optimization/: RESEARCH_STRATEGYCOMPARATOR_SPECIFICATION.md  RESEARCH_V0.3_SPECIFICATION.md
docs/specifications/research/: EXPERIMENT_DEFINITION_SPECIFICATION.md  PARAMETER_SWEEP_ENGINE_SPECIFICATION.md
src/cli/: __init__.py  main.py
src/engine/: __init__.py
src/engine/application/: __init__.py  executor.py  pipeline.py  runner.py  simulation.py  simulation_context.py  statistics_builder.py
src/engine/domain/: __init__.py  asset.py  dataset.py  event.py  market_snapshot.py  optimizer.py  policy.py  portfolio.py  simulation.py  validation.py
src/infrastructure/: __init__.py
src/infrastructure/csv/: __init__.py
src/research/: __init__.py  experiments.py
tests/: test_allocation.py  test_allocation_decision_step.py  test_build_decision_context_step.py  test_cohort_generator.py  test_cohort_specification.py  test_dataset.py  test_engine_imports.py  test_experiment_definition.py  test_imports.py  test_market_evolution_step.py  test_money.py  test_monthly_result_builder_step.py  test_parameter_sweep_engine.py  test_policy_interfaces.py  test_portfolio.py  test_portfolio_market_evolution_service.py  test_portfolio_rebalance_integration.py  test_portfolio_rebalance_service.py  test_portfolio_rebalance_step.py  test_portfolio_withdrawal_service.py  test_research_executor.py  test_research_plan.py  test_simulation_executor.py  test_simulation_runner.py  test_simulation_runner_integration.py  test_simulation_state_update_step.py  test_simulation_statistics_builder.py  test_swr_optimizer.py  test_validation.py  test_withdrawal_decision_step.py  test_withdrawal_execution_step.py
(+56 files in other folders)
