[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

################################################################################
# Project
################################################################################

[project]
name = "retirement-simulator"
version = "0.1.0"
description = "Deterministic Safe Withdrawal Rate simulation engine."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Julio Gracia" }
]

################################################################################
# Dependencies
################################################################################

dependencies = [
]

################################################################################
# Optional dependencies
################################################################################

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "black",
    "mypy"
]

################################################################################
# Black
################################################################################

[tool.black]

line-length = 100

target-version = ["py313"]

################################################################################
# Ruff
################################################################################

[tool.ruff]

line-length = 100

target-version = "py313"

exclude = [
    ".venv",
    "build",
    "dist"
]

################################################################################
# Ruff Lint
################################################################################

[tool.ruff.lint]

select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4"
]

ignore = [
]

################################################################################
# isort (handled by Ruff)
################################################################################

[tool.ruff.lint.isort]

combine-as-imports = true

################################################################################
# Pytest
################################################################################

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

python_functions = [
    "test_*"
]

addopts = [
    "-ra",
    "--strict-markers"
]

################################################################################
# Coverage
################################################################################

[tool.coverage.run]

branch = true

source = [
    "src"
]

################################################################################
# Coverage Report
################################################################################

[tool.coverage.report]

show_missing = true
skip_covered = false

################################################################################
# Mypy
################################################################################

[tool.mypy]

python_version = "3.13"

strict = true

warn_return_any = true

warn_unused_configs = true

warn_unused_ignores = true

disallow_untyped_defs = true

disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

pretty = true

################################################################################
# setuptools
################################################################################

[tool.setuptools]

package-dir = {"" = "src"}

################################################################################
# setuptools packages
################################################################################

[tool.setuptools.packages.find]

where = [
    "src"
]